--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -1,13 +1,75 @@
 input {
-	tcp {
-		port => 5000
-	}
+    tcp {
+        port => 5000
+        tags => ["hisevent"]
+    }
+    tcp {
+        port => 5001
+        tags => ["rtuevent"]
+    }
 }
 
 ## Add your filters / logstash plugins configuration here
+filter {
+    if "hisevent" in [tags] {
+        csv {
+            separator => ";"
+            skip_header => "true"
+            columns => ["alarm_id", "environment", "value", "ack_required", "severity", "equipment_class", "functional_cat", "geographical_cat", "timestamp", "equipment", "asset", "message", "status", "group1", "group2", "format", "dss_event_type", "operator"]
+        }
+        date {
+            match => ["timestamp", "dd/MM/yyyy HH:mm:ss"]
+            target => "@timestamp"
+            timezone => "Asia/Singapore"
+            remove_field => ["timestamp"]
+        }
+        mutate {
+            convert => ["alarm_id", "integer"]
+            convert => ["value", "integer"]
+            convert => ["ack_required", "integer"]
+            convert => ["severity", "integer"]
+            convert => ["equipment_class", "integer"]
+            convert => ["functional_cat", "integer"]
+            convert => ["geographical_cat", "integer"]
+            convert => ["group1", "integer"]
+            convert => ["group2", "integer"]
+            convert => ["format", "integer"]
+        }
+    } else if "rtuevent" in [tags] {
+        csv {
+            separator => ","
+            skip_header => "true"
+            columns => ["timestamp", "host", "level", "process", "process_id", "filename", "line", "message", "raw_message"]
+        }
+        date {
+            match => ["timestamp", "yyyy-MM-dd HH:mm:ss.SSS"]
+            target => "@timestamp"
+            timezone => "Asia/Singapore"
+            remove_field => ["timestamp"]
+        }
+        mutate {
+            convert => ["line", "integer"]
+            convert => ["process_id", "integer"]
+            strip => ["message", "raw_message"]
+        }
+        if "OK" in [message] {
+            grok {
+                match => {"message" => "%{NUMBER}:Link%{SPACE}?%{NUMBER}? %{DATA:swc} (?<state>NOT OK|OK)"}
+            }
+        }
+    }
+}
 
 output {
-	elasticsearch {
-		hosts => "elasticsearch:9200"
-	}
+    if "hisevent" in [tags] {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            index => "hisevent-%{+YYYY.MM.dd}"
+        }
+    } else if "rtuevent" in [tags] {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            index => "rtuevent-%{+YYYY.MM.dd}"
+        }
+    }
 }
