Process MEN-based RTU log from port 5002

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -7,6 +7,10 @@ input {
         port => 5001
         tags => ["rtuevent"]
     }
+    tcp {
+        port => 5002
+        tags => ["menrtu"]
+    }
 }
 
 ## Add your filters / logstash plugins configuration here
@@ -57,6 +61,29 @@ filter {
                 match => {"message" => "%{NUMBER}:Link%{SPACE}?%{NUMBER}? %{DATA:swc} (?<state>NOT OK|OK)"}
             }
         }
+    } else if "menrtu" in [tags] {
+        csv {
+            separator => ","
+            skip_header => "true"
+            columns => ["timestamp", "hostname", "filename", "message", "raw_message"]
+        }
+        date {
+            match => ["timestamp", "dd/MM/yy HH:mm:ss"]
+            target => "@timestamp"
+            timezone => "Asia/Singapore"
+            remove_field => ["timestamp"]
+        }
+        mutate {
+            strip => ["message", "raw_message"]
+        }
+        if "OK" in [message] {
+            grok {
+                # Link 1 PIS OK
+                # Link POWER OK
+                # Link LIFT 1 NOT OK
+                match => {"message" => "Link%{SPACE}?%{NUMBER}? %{DATA:swc} (?<state>NOT OK|OK)"}
+            }
+        }
     }
 }
 
@@ -70,6 +97,11 @@ output {
         elasticsearch {
             hosts => "elasticsearch:9200"
             index => "rtuevent-%{+YYYY.MM.dd}"
+        }
+    } else if "menrtu" in [tags] {
+        elasticsearch {
+            hosts => "elasticsearch:9200"
+            index => "menrtu-%{+YYYY.MM.dd}"
         }
     }
 }
