Fix columns for MENRTU

--- a/logstash/pipeline/logstash.conf
+++ b/logstash/pipeline/logstash.conf
@@ -65,7 +65,7 @@ filter {
         csv {
             separator => ","
             skip_header => "true"
-            columns => ["timestamp", "hostname", "filename", "message", "raw_message"]
+            columns => ["timestamp", "message", "filename", "line", "level", "host"]
         }
         date {
             match => ["timestamp", "dd/MM/yy HH:mm:ss"]
@@ -74,6 +74,7 @@ filter {
             remove_field => ["timestamp"]
         }
         mutate {
+            convert => ["line", "integer"]
             strip => ["message", "raw_message"]
         }
         if "OK" in [message] {
